Migration to SpringBoot 2.6.2 and Java 17